k8s/quotes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kodilla-quotes
  labels:
    app: kodilla-quotes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kodilla-quotes
  template:
    metadata:
      name: kodilla-quotes
      labels:
        app: kodilla-quotes
    spec:
      containers:
        - name: kodilla-quotes
          image: wojciechsak/quotesapp
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 3
